configuring errors in static files

--- a/students/templates/students/register.html
+++ b/students/templates/students/register.html
@@ -15,7 +15,7 @@
         <input type="text" name="name" placeholder="Full Name" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="text" name="mobile" placeholder="Mobile" required>
-        <input type="text" name="class" placeholder="Class" required>
+        <input type="text" name="class_name" placeholder="Class" required>
         <button type="submit">Register</button>
     </form>
 
